<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoMorrow</string>
    <string name="title_activity_todo_list">Task List</string>
    <string name="title_activity_task_form">Add Task</string>
    <string name="title_activity_goal_list">Goal List</string>
    <string name="title_activity_goal_overview">Goal Overview</string>
    <string name="title_activity_goal_form">Add Goal</string>
    <string name="title_activity_edit">Edit Task</string>
    <string name="title_activity_dialog_postpone">Postpone Task</string>
    <string name="title_activity_dialog_finish">Mark Task as finished</string>
    <string name="deadline_date">Date of Deadline</string>
    <string name="deadline_time">Time of Deadline</string>
    <string name="task">Task</string>
    <string name="task_name">Description</string>
    <string name="task_hint">e.g. Project setup</string>
    <string name="task_value">Value: </string>
    <string name="task_value_zero">Value: 0</string>
    <string name="goal">Goal</string>
    <string name="addGoal">Add Goal</string>
    <string name="addTask">Add Task</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="deadline">Deadline</string>
    <string name="selectGoal">Select Goal</string>
    <string name="goal_name">Goal name:</string>
    <string name="goal_name_hint">e.g. Android Project</string>
    <string name="goal_add_deadline">Add deadline</string>
    <string name="goal_overview_graph_domain">Day of year</string>
    <string name="goal_overview_graph_range">Tasks</string>
    <string name="goal_overview_tasklist">Tasks for this Goal:</string>
    <string name="goal_overview_goal">Goal:</string>
    <string name="goal_menu_title">Options</string>
    <string name="goal_menu_switchToTasklist">Switch to task list</string>
    <string name="task_menu_title">Options</string>
    <string name="task_menu_sortByDeadline">Sort by deadline</string>
    <string name="task_menu_filterByGoal">Filter by Goal</string>
    <string name="task_menu_showGoallist">Switch to Goal list</string>
    <string name="task_menu_delete_finished">Delete finished Tasks</string>
    <string name="task_menu_refresh">Refresh List</string>
    
    <string name="notificationText">   Value: </string>
    <string name="dialog_goal_selection_title">Select goals which should be shown:</string>
    <string name="alert_goal_notunique">There is already a goal with this name in the database! Please choose a different one!</string>
    <string name="alert_goal_name_empty">The goal name must not be empty!</string>
    <string name="alert_goal_name_toolong">The goal name is too long!</string>
    <string name="alert_goal_deadlinepast">The goal deadline must not be in the past!</string>
    <string name="alert_task_name_empty">The task name must not be empty!</string>
    <string name="alert_task_name_toolong">The task name is too long!</string>
    <string name="alert_task_deadlinepast">The task deadline must not be in the past!</string>
    <string name="alert_deadline_after_goal">Task deadline must not be after Goal deadline!</string>
    <string name="finish_task">Do you want to mark this task as finished?</string>
    <string name="pick_value">Value for this Task</string>

</resources>