<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/task_menu"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="ifRoom|withText"
        android:title="@string/task_menu_title">
        <menu>
            <item
                android:id="@+id/show_goalList"
                android:title="@string/task_menu_showGoallist"/>
            <item
                android:id="@+id/filter_by_goal"
                android:title="@string/task_menu_filterByGoal"/>
            <item
                android:id="@+id/sort_by_deadline"
                android:title="@string/task_menu_sortByDeadline"/>
            <item 
                android:id="@+id/delete_finished_tasks"
                android:title="@string/task_menu_delete_finished" />
        </menu>
    </item>

</menu>