<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_overview_goal" />

        <TextView
            android:id="@+id/goal_overview_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:text="Goal" />
    </LinearLayout>

    <com.androidplot.xy.XYPlot
        android:id="@+id/goal_overview_plot"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        androidPlot.domainLabel="@string/goal_overview_graph_domain"
        androidPlot.rangeLabel="@string/goal_overview_graph_range"
        title="Overview Tasks" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4sp"
        android:text="@string/goal_overview_tasklist" />

    <Button
        android:id="@+id/overview_new_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addTask"
        android:text="@string/addTask" />

    <fragment
        android:id="@+id/goal_overview_task_list_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.lnu.todomorrow.TaskListFragment" />

</LinearLayout>