<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <View
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:background="#ff121212" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/show_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="4dp"
                android:text="@string/task"
                android:textColor="@color/dark_green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/value_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="1dp"
                android:text="@string/task_value" />

            <TextView
                android:id="@+id/show_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/task_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/show_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:text="@string/deadline" />

            <TextView
                android:id="@+id/show_goal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>